[package]
name = "stellar-trust-escrow-contract"
version = "0.1.0"
edition = "2021"
publish = false
description = "Milestone-based escrow contract with on-chain reputation — StellarTrustEscrow"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.0.0", features = [] }
stellar-trust-shared = { path = "../shared" }

[dev-dependencies]
criterion = "0.4"
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
